# github-copilot-upgrading

./: .gitignore  README.md  README_ko.md
.devcontainer/: Dockerfile  devcontainer.json
workshop/: README.md
workshop/legacy/: setup.py
workshop/legacy/guachi/: config.py  database.py
workshop/upgraded/: PROJECT_STRUCTURE.md  pyproject.toml  requirements.txt  setup.py
workshop/upgraded/docs/: USAGE_EXAMPLES.md
workshop/upgraded/guachi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workshop/upgraded/guachi/tests/: test_database.py
